fix : fix pdf view in cv sevtion on mobile devices
 - changed embed to iframe(mobile support).
 - load from google pdf viewer(else mobile will try to download, duh.).

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -323,6 +323,9 @@ body {
 
 .cv-page {
   height: 100vh;
+  iframe {
+    width: 100% !important;
+  }
   .cv-container {
     width: 100%;
     height: 100%;
